# nanoFold-Competition

./: .gitignore  .gitmodules  eval.py  pyproject.toml  train_ddp.py  train_deepspeed.py
configs/: deepspeed_zero2.json
data/: setup_log.txt
docs/: af2_presentation.md  alphafold2_recycling.md  data_overview.md  openfold2_baseline.md  structure_module_explained.md
scripts/: benchmark_bpc.py  benchmark_flash.py  setup_openfold.sh  sweep_bpc.sh
submissions/openfold_unlimited/: config.yaml  config_ckpt_exp.yaml  config_compile_test.yaml  config_debug.yaml  config_research_large.yaml  submission.py
