[project]
name = "nanofold"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "gemmi>=0.6",
    "biopython>=1.81",
    "awscli>=1.44.87",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyright>=1.1",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "data",
  "runs",
  "third_party",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
  "E501",   # keep long command/doc strings readable
  "E402",   # scripts adjust sys.path before importing repo modules
  "B009",   # tests and runtime intentionally use dynamic module attributes
  "UP015",  # keep utility scripts readable across supported Python installs
  "UP017",
  "UP037",
  "UP045",
  "UP006",  # allow typing.Dict/List where they keep type-heavy code readable
  "UP035",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
exclude = "(^data/|^runs/|^third_party/)"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["nanofold", "scripts", "tests", "train.py", "eval.py", "predict.py", "score.py"]
exclude = ["data", "runs", "third_party", ".venv"]
typeCheckingMode = "basic"
reportPrivateImportUsage = false
